<resources>
    <string name="app_name">TodoApp</string>
    <string name="favorite_button">Favorite button</string>
    <string name="more">More</string>
    <string name="app_title">Задачи</string>
    <string name="create_task_fab_description">Создать задачу</string>
    <string name="accounts">Аккаунты</string>
    <string name="create_task_hint">Новая задача</string>
    <string name="save">Сохранить</string>
    <string name="addit_info_content_description">Дополнительная информация</string>
    <string name="set_time_content_description">Указать время</string>
    <string name="add_in_favorite_content_description">Добавить в избранное</string>
    <string name="add_addit_info_hint">Добавьте дополнительную информацию</string>
    <string name="completed">Выполнено</string>
    <string name="uncompleted">Невыполнено</string>
    <string name="favorite">Избранныые</string>
    <string name="completed_task">Выполненые</string>
    <string name="my_task">Мои задачи</string>

    <style name="TabLayoutStyle" parent="TextAppearance.Design.Tab">
        <item name="textAllCaps">false</item>
        <item name="android:textAllCaps">false</item>
    </style>
</resources>