<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/create_task_hint"
        android:textColor="@color/black"
        android:textSize="24sp"
        tools:text="Сдать матан"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/additional_info_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_addit_info"
            android:contentDescription="@string/addit_info_content_description"
            android:backgroundTint="#00FFFFFF"/>

        <ImageButton
            android:id="@+id/set_time_image_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_time"
            android:contentDescription="@string/set_time_content_description"
            android:backgroundTint="#00FFFFFF"/>

        <ImageButton
            android:id="@+id/add_in_favourite_imega_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_star_border"
            android:contentDescription="@string/add_in_favorite_content_description"
            android:backgroundTint="#00FFFFFF"/>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/save_task_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:textColor="@color/black"
            android:background="#00FFFFFF"/>


    </LinearLayout>

</LinearLayout>